[tool.poetry]
name = "user-api-litestar"
version = "0.1.0"
description = "User management REST API with Litestar and PostgreSQL"
authors = ["Raul"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0"
litestar = { extras = ["standard"], version = "^2.0" }
litestar-granian = "^0"
litestar-asyncpg = "^0"
advanced-alchemy = "^0.20.1"
msgspec = "^0.18.6"
sqlalchemy = "^2.0.40"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
