[tool.poetry]
name = "litestar-user-api"
version = "0.1.0"
description = "REST API для управления пользователями на базе Litestar"
authors = ["Raul"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1"
litestar = { extras = ["standard"], version = "^2" }
litestar-granian = "^0"
litestar-asyncpg = "^0"
advanced-alchemy = "^0.20"
msgspec = "^0.18.6"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
alembic = "^1.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
